--- a/app/src/main/res/layout/song_card_view.xml
+++ b/app/src/main/res/layout/song_card_view.xml
@@ -11,25 +11,24 @@
         android:orientation="vertical">
 
 
-    <ImageView
-        android:id="@+id/music_item_image"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-      />
+        <ImageView
+            android:id="@+id/music_image"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:cropToPadding="true" />
 
-    <TextView
-        android:id="@+id/music_item_title_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:text="Hymns For Weekend" />
+        <TextView
+            android:id="@+id/track_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:text="Hymns For Weekend" />
 
-    <TextView
-        android:id="@+id/music_item_author_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:text="Coldplay"
-        />
+        <TextView
+            android:id="@+id/artist_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:text="Coldplay" />
 
-</LinearLayout>
+    </LinearLayout>
 </LinearLayout>
