--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:id="@+id/heler_text"
+        android:id="@+id/helper_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
